<resources>
    <string name="app_name">SchoolJournal</string>
    <string name="school_journal">School Journal</string>
    <string name="t_loggin_title1">Welcome!</string>
    <string name="t_loggin_title2">Log in to use the app\'s features</string>
    <string name="t_regestration">Register</string>
    <string name="error_email_invalid">Incorrect email address</string>
    <string name="t_email_sign">Log in by E-mail</string>
    <string name="password">Password</string>
    <string name="example_mail_com" translatable="false">example@mail.com</string>
    <string name="hello">Hello!</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="telephone">Telephone</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>
    <string name="male">Male</string>
    <string name="woman">Woman</string>
    <string name="none">None</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_password_must_contain_at_least_8_characters_uppercase_and_lowercase_letters_numbers_and_special_characters">The password must contain at least 8 characters: uppercase and lowercase letters, numbers, and special characters.</string>
    <string name="new_password">New password</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match.</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="error_network">Check your network connection</string>
    <string name="error_auth_expired">Your session has expired. Please log in again.</string>
    <string name="error_no_permission">You do not have sufficient permissions to perform the operation.</string>
    <string name="error_not_found">The requested data was not found.</string>
    <string name="error_server">Server error. Please try again.</string>
    <string name="error_empty_body">Empty server response.</string>
    <string name="error_unknown">Something went wrong. Please try again.</string>
    <string name="error_invalid_credentials">Incorrect login or password.</string>
    <string name="action_retry">Retry.</string>
    <string name="action_ok">OK.</string>
    <string name="error_loading">Error Loading</string>
    <string name="class_grade_letter_format" translatable="false">%d%s</string>
    <string name="tv_lessons_time" translatable="false">%1$s - %2$s</string>
    <string name="without_a_theme">Without a theme</string>
    <string name="without_a_room_number" translatable="false">-</string>
    <string name="tv_student_name" translatable="false">%1$s %2$s</string>
    <string name="mock_grade_saved">Rating saved</string>
    <string name="users">Users</string>
    <string name="classes">Classes</string>
    <string name="objects">Subjects</string>
    <string name="appointments">Assignments</string>
    <string name="average_mark_format">Average score: %.1f</string>
    <string name="exit">Exit</string>
    <string name="logout_message">You are logged out</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="incorrect_lastname">Incorrect lastname</string>
    <string name="incorrect_surname">Incorrect surname</string>
    <string name="administrator">Administrator</string>
    <string name="director">Director</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="representative">Representative</string>
    <string name="incorrect_name">Incorrect name</string>
    <string name="roles">Roles</string>
    <string name="changing_the_profile">Changing the userInfo</string>
    <string name="active">Activated</string>
    <string name="deleting">Deleted</string>
    <string name="pending">Not Activated</string>
    <string name="blocked">Blocked</string>
    <string name="status">Status</string>
    <string name="editing_a_user">Editing a user</string>
    <string name="delete_confirmation">Confirmation of deletion</string>
    <string name="delete_user_confirmation">Delete user %s?</string>
    <string name="delete">Delete</string>
    <string name="role">Role</string>
    <string name="school">School</string>
    <string name="error_load_schools">Failed to load the list of schools</string>
    <string name="error_load_teachers">Failed to load the list of teachers</string>
    <string name="edit_class">Editing a class</string>
    <string name="grade_number">Class number (1–11)</string>
    <string name="grade_error">Enter a number from 1 to 11</string>
    <string name="letter">Class letter</string>
    <string name="letter_error">Enter a letter (for example, A, B)</string>
    <string name="academic_year_start">Start year (for example, 2025)</string>
    <string name="academic_year_end">End year (for example, 2026)</string>
    <string name="class_teacher">Class teacher</string>
    <string name="delete_class_confirmation">Delete class %s?</string>
    <string name="edit_subject">Edit item</string>
    <string name="subject_name">Item name</string>
    <string name="incorrect_subject_name">Enter item name</string>
    <string name="delete_subject_confirmation">Delete item %s?</string>
    <string name="description">Description</string>
    <string name="edit_assignment">Editing an assignment</string>
    <string name="subject">Subject</string>
    <string name="valid_from">Start date (dd.mm.yyyy)</string>
    <string name="valid_to">End date (dd.mm.yyyy)</string>
    <string name="is_primary">Main assignment</string>
    <string name="delete_assignment_confirmation">Delete teacher assignment %s?</string>
    <string name="date_create">Date create</string>
    <string name="homeworks">Homework assignments</string>
    <string name="class_name_hint">Class name (for example, 5A)</string>
    <string name="edit_profile">Edit userInfo</string>
    <string name="not_specified">Not specified</string>
    <string name="no_school">without school</string>
    <string name="homework_assignments">Homework assignments</string>
    <string name="logging_in">Logging in</string>
    <string name="saving">Saving</string>
    <string name="not_granted">No access</string>
    <string name="class_name">Class name</string>
    <string name="valid_period">Valid during the period</string>
    <string name="subjects">Subjects</string>
    <string name="assignments">Assignments</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_user_deleted">User deleted</string>
    <string name="error_user_not_confirmed">User not verified</string>
    <string name="error_user_blocked">User blocked</string>
    <string name="error_record_already_fixed">Record already committed (more than 3 days passed)</string>
    <string name="error_teacher_cannot_teach">Teacher does not have the right to teach the subject</string>
    <string name="error_student_not_in_class">Student is not in the class</string>
    <string name="error_no_permission_to_grade">You do not have the right to evaluate</string>
    <string name="error_field_required">Required field is empty</string>
    <string name="error_no_permission_to_manage_user">Insufficient rights to manage the user</string>
    <string name="error_cannot_delete_class_with_students">Cannot delete the class: it has students</string>
    <string name="error_cannot_delete_class_with_lessons">Cannot delete the class: lessons are scheduled for it</string>
    <string name="error_room_not_belongs_to_school">The office does not belong to the class school</string>
    <string name="error_teacher_time_conflict">The teacher already has a lesson at this time</string>
    <string name="error_class_time_conflict">The class already has a lesson at this time</string>
    <string name="error_start_time_after_end_time">The start time must be earlier than the end time</string>
    <string name="error_cannot_delete_school_with_classes">Unable to delete the school: it has classes</string>
    <string name="error_cannot_delete_room_used_in_lessons">Unable to delete the classroom: it is used in lessons</string>
    <string name="error_class_time_overlap">Intersection of class intervals</string>
    <string name="error_multiple_primary_teachers">Multiple head teachers in overlapping periods</string>
    <string name="error_permission_out_of_range">Permission exceeded the range</string>
    <string name="error_record_not_found">Record not found</string>
    <string name="error_school_not_found">School not found</string>
    <string name="error_class_not_found">Class not found</string>
    <string name="error_subject_not_found">Subject not found</string>
    <string name="error_teacher_not_found">Teacher not found</string>
    <string name="error_unique_violation">Unique violation</string>
    <string name="error_foreign_key_violation">Foreign key violation</string>
    <string name="error_record_already_exists">The record already exists</string>
    <string name="error_conflict">Data conflict</string>
    <string name="error_http">HTTP error</string>
    <string name="old_password">Old password</string>
    <string name="repeat_new_password">Repeat the new password</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="change_password">Change password</string>
    <string name="period">Period</string>
    <string name="grades">Grades</string>
    <string name="lessons">Classes</string>
    <string name="prepod">Teacher: %1$s</string>
    <string name="prepod_not">Teacher not specified</string>
    <string name="good_day">Good afternoon</string>
    <string name="good_day_format">Good afternoon, %1$s</string>
    <string name="lessons_today_format">You have %1$d classes today</string>
    <string name="room_not_specified">Classroom not specified</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="it_is_not_possible_to_reset_the_password_yet">It is not possible to reset the password yet</string>
    <string name="i_agree_to_the_terms_of_use_and_privacy_policy">I agree to the Terms of Use and Privacy Policy</string>
    <string name="audit_log">Logs</string>
    <string name="schools">School</string>
    <string name="time_range" translatable="false">%1$s - %2$s</string>
    <string name="theme_not_supported">Тема не указана</string>
    <string name="Hello_teacher_name">Здравствуйте, %1$s!</string>
    <string name="hello_teacher">Здравствуйте, Учитель!</string>
    <string name="def_teacher_dashboard_name">N:N, Не указано (Нет названия)</string>
    <string name="grade_for_lesson">Оценки за урок</string>
</resources>