<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:helperText="@string/lastname"
        app:schjTextError="@string/incorrect_lastname" />

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:helperText="@string/name"
        app:schjTextError="@string/incorrect_name" />

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/surNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:helperText="@string/surname"
        app:schjTextError="@string/incorrect_surname" />

    <!-- Date of Birth and Gender in 2 columns -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <stud.euktop.uikit.components.input.SchJInput
            android:id="@+id/birthDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:cursorVisible="false"
            android:hint="@string/birthday"
            android:inputType="none"
            app:endIconMode="clear_text"
            app:helperText="@string/birthday" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/Widget.SchJ.TextView.Helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <stud.euktop.uikit.components.input.select.def.SchJSelect
                android:id="@+id/genderSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/gender" />
        </LinearLayout>
    </LinearLayout>

    <!-- Contact Info Section Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Контактная информация"
        android:textAppearance="@style/TextAppearance.SchJ.Headline"
        android:textColor="@color/on_surface_variant"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bottom_border" />

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:helperText="@string/email"
        app:schjTextError="@string/error_email_invalid" />

    <stud.euktop.uikit.components.input.SchJInput
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:inputType="phone"
        app:helperText="@string/telephone"
        app:schjTextError="@string/incorrect_phone_number" />

</LinearLayout>