<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.auth.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:text="@string/create_profile"
            android:textAppearance="@style/TextAppearance.SchJ.Title1.Bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:divider="@drawable/div_16"
            android:dividerPadding="16dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/surNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textPersonName" />

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/birthDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/birthday"
                android:inputType="none"
                app:endIconMode="clear_text" />

            <stud.euktop.uikit.components.input.select.SchJSelect
                android:id="@+id/genderSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/gender" />

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone"
                android:inputType="phone"
                app:schjTextError="@string/incorrect_phone_number" />

            <stud.euktop.uikit.components.input.SchJInput
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:schjTextError="@string/error_email_invalid" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="32dp" />

        <stud.euktop.uikit.components.button.SchJButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:schJButtonClass="PRIMARY"
            app:schJButtonType="BIG" />
    </LinearLayout>
</ScrollView>